tests/baselines/reference/parserConditionalExpression1.errors.txt
==== tests/cases/compiler/parserConditionalExpression1.ts (7 errors) ====
    (a=this.R[c])?a.JW||(a.e5(this,c),a.JW=_.l):this.A
     ~
!!! parserConditionalExpression1.ts(1,2): error TS2095: Cannot find name 'a'.
              ~
!!! parserConditionalExpression1.ts(1,11): error TS2095: Cannot find name 'c'.
                  ~
!!! parserConditionalExpression1.ts(1,15): error TS2095: Cannot find name 'a'.
                         ~
!!! parserConditionalExpression1.ts(1,22): error TS2095: Cannot find name 'a'.
                                   ~
!!! parserConditionalExpression1.ts(1,32): error TS2095: Cannot find name 'c'.
                                      ~
!!! parserConditionalExpression1.ts(1,35): error TS2095: Cannot find name 'a'.
                                           ~
!!! parserConditionalExpression1.ts(1,40): error TS2095: Cannot find name '_'.